renamed image paths

--- a/src/components/BigBox.module.css
+++ b/src/components/BigBox.module.css
@@ -6,7 +6,7 @@
   border-radius: 40px;
   display: flex;
   justify-content: end;
-  background-image: url(../../ass/backie.png);
+  background-image: url(../../assets/backie.png);
   background-repeat: no-repeat;
   background-position: bottom left;
   position: relative;
