--- a/src/Pages/Header.module.css
+++ b/src/Pages/Header.module.css
@@ -11,18 +11,20 @@ ul {
 
 .Header {
   display: flex;
-  position: relative;
-  padding-right: 20vw;
   background-color: rgb(255, 255, 255);
-  position: relative;
+  width: 100%;
   height: 120px;
-  padding-left: 20vw;
   box-sizing: border-box;
   align-items: center;
   font-size: medium;
   justify-content: space-around;
   color: black;
-  
+  box-shadow: 0px 8px 18px -2px rgba(14, 13, 13, 0.1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9;
+  padding: 0 200px;
 }
 
 .header_symbol {
@@ -38,7 +40,7 @@ ul {
   color: white;
   text-transform: uppercase;
 }
-
+/* get in touch */
 .git {
   background-color: orangered;
   text-align: center;
@@ -51,8 +53,7 @@ ul {
   width: 120px;
 }
 
-img{
+img {
   padding-left: 100px;
   padding-right: 100px;
 }
-
