--- a/src/components/AppWidget.module.css
+++ b/src/components/AppWidget.module.css
@@ -7,6 +7,25 @@
   left: 3%;
   top: 7%;
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  position: relative;
+  width: 350px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 10px;
+  border-radius: 10px;
+  backdrop-filter: blur(30px);
+  background-color: rgba(65, 65, 65, 0.308);
+  border: 1px solid rgba(255, 255, 255, 0.089);
+  cursor: pointer;
 }
 
 .bottom {
@@ -56,7 +75,7 @@ p {
   border-radius: 15px;
   top: 10%;
   left: 10%;
-  width: 80%;
+  width: 0%;
   height: 10%;
   border: white 1px solid;
   outline: none;
