--- a/src/components/PercentageBar.module.css
+++ b/src/components/PercentageBar.module.css
@@ -1,36 +1,52 @@
 .percentage {
-  height: 170px;
-  width: 75px;
+  height: 80px;
+  width: 160px;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   background-color: #ffffff;
-  margin-left: 5px;
-  margin-right: 5px;
   flex-shrink: 0;
 }
 
 .percentage_bar {
-  width: 20%;
+  width: 75%;
   border-radius: 18px;
-  height: 75%;
+  height: 15%;
   background-color: #dcdcdc;
   display: flex;
   flex-direction: column;
   justify-content: end;
   overflow: hidden;
+  transform: translate(0px,-1vh);
 }
 
 .percent {
   width: 100%;
   height: 97%;
-  border-radius: 0 0 18px 18px;
   background-color: #5c9ee7;
 }
 
 .number {
   font-weight: bold;
   padding-left: 4px;
+  transform: translate(0px,-10px);
+}
+
+.icon{
+  width: 25px;
+  align-self:flex-end;
+  margin-top: 6px;
+  opacity: 0.7;
+}
+
+.title{
+  align-self: flex-start;
+  
+  margin: 20px 0 0  10px;
+  opacity: 0.7;
+  color: black;
+  font-size: small;
+  transform: translate(0px,-4vh);
 }
