--- a/src/components/Row1.module.css
+++ b/src/components/Row1.module.css
@@ -1,11 +1,11 @@
 .row1 {
   height: 40%;
-  width: 100%;
+  width: 80%;
+  margin:  auto;
   border-radius: 40px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   position: relative;
-  padding-left: 100px;
-  padding-right: 100px;
+  flex-wrap: wrap;
 }
