--- a/src/styles.css
+++ b/src/styles.css
@@ -7,10 +7,13 @@ body {
   font-family: "Encode Sans Semi Condensed", sans-serif;
   font-weight: 100;
   font-style: normal;
-  background-color: black;
+  background-color: white;
 }
 
 .App {
   font-family: sans-serif;
   text-align: center;
+}
+.main{
+  margin: 200px 0 300px 0 ;
 }
