--- a/src/Pages/Header.module.css
+++ b/src/Pages/Header.module.css
@@ -8,6 +8,33 @@ ul {
   margin: 0;
   list-style-type: none;
 }
+a:-webkit-any-link {
+  color: black;
+  text-decoration: none;
+}
+a:-webkit-any-link:hover {
+  text-decoration: underline;
+  color: brown;
+}
+NavLink {
+  position: relative;
+  text-decoration: none;
+}
+
+NavLink::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: #007bff; /* Adjust color as needed */
+  transition: width 0.3s ease;
+}
+
+NavLink:hover::before {
+  width: 100%;
+}
 
 .Header {
   display: flex;
