--- a/src/Pages/AboutUs.module.css
+++ b/src/Pages/AboutUs.module.css
@@ -35,7 +35,25 @@
   .content h3 {
     max-width: 450px;
   }
-  
+  .icontent h2 {
+    font-size: 30px;
+  }
+  .icontent p{
+    font-size: 16px;
+  }
+  .icontent{
+    width:70%;
+  }
+  .af{
+    margin :20% auto 0 auto; 
+    width :75%;
+    display :flex;
+  }
+  .teams{
+    width :75%;
+    display :flex;
+    margin: 0 auto;
+  }
   .content p {
     width: 300px;
     font-size: 17px;
